Added Map to searching

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
                 <option value="city">City</option>
                 <option value="duration">Duration (weeks)</option>
                 <option value="box">Box size</option>
-                <option value="duration">Locations nearby</option>
+                <option value="location">Locations nearby</option>
               </select>
             <% end %>
             <%# different layout for user_login and host_login and Non-login%>
