--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -13,8 +13,7 @@
       rel="stylesheet"
     /> 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <span id='listing-variable' style ='display:none'><%@listing_json%></span>
-    <%= content_tag :div, class: "listings", data: {listings: @listing_json} do %><% end %>
+    <%= content_tag :div, class: "listings", data: {listings: @listing_json, longitude: @longitude, latitude: @latitude} do %><% end %>
     <style>
       body {
         color: #404040;
@@ -243,10 +242,12 @@
       /**
        * Add the map to the page
        */
+    var longitude = $('.listings').data('longitude');
+    var latitude = $('.listings').data('latitude');
       var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/light-v10',
-        center: [-71.258632 ,42.458990],
+        center: [longitude ,latitude],
         zoom: 13,
       });
         
@@ -378,7 +379,7 @@
             /* Assign a unique `id` to the button. */
             buttonElem.id = 'button';
             /* Assign the `marker` class to each button for styling. */
-            buttonElem.href = '/listing/' + 275;
+            buttonElem.href = '/listing/' + prop.listing_id;
             buttonElem.innerHTML = 'Rent Space';
             buttonElem.className = 'button';
             buttonElem.style.display = 'none';
