--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Store Locator</title>
+    <title>Listing Locator</title>
     <meta
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
@@ -14,6 +14,11 @@
     /> 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <%= content_tag :div, class: "listings", data: {listings: @listing_json, longitude: @longitude, latitude: @latitude} do %><% end %>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css" type="text/css">
+    <!-- Turf.js plugin -->
+    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+
     <style>
       body {
         color: #404040;
@@ -43,8 +48,8 @@
         position: absolute;
         left: 33.3333%;
         width: 66.6666%;
-        top: 0;
-        bottom: 0;
+        top: 50px;
+        bottom: 0px;
       }
 
       h1 {
@@ -196,6 +201,19 @@
       .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
         border-bottom-color: #91c949;
       }
+        .mapboxgl-ctrl-geocoder {
+        border: 0;
+        border-radius: 0;
+        position: relative;
+        top: 0;
+        width: 800px;
+        margin-top: 0;
+        }
+
+        .mapboxgl-ctrl-geocoder > div {
+        min-width: 100%;
+        margin-left: 0;
+        }
 
       .button {
           background-color: #4CAF50; /* Green */
@@ -242,14 +260,14 @@
       /**
        * Add the map to the page
        */
-        var longitude = $('.listings').data('longitude');
-        var latitude = $('.listings').data('latitude');
-          var map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/light-v10',
-            center: [longitude ,latitude],
-            zoom: 13,
-          });
+    var longitude = $('.listings').data('longitude');
+    var latitude = $('.listings').data('latitude');
+      var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11',
+        center: [longitude ,latitude],
+        zoom: 13,
+      });
         
         var listings = $('.listings').data('listings');
 
@@ -261,6 +279,20 @@
       listings.features.forEach(function (store, i) {
         store.properties.id = i;
       });
+    var geocoder = new MapboxGeocoder({
+        accessToken: mapboxgl.accessToken,
+        mapboxgl: mapboxgl,
+        flyTo: {
+            maxZoom: 12 // If you want your result not to go further than a specific zoom
+          },
+        placeholder: 'Search for address or city', // Placeholder text for the search bar
+        //bbox: [-122.30937, 37.84214, -122.23715, 37.89838], // Boundary for Berkeley
+        proximity: {
+        longitude: longitude,
+        latitude: latitude
+        },
+        });
+    map.addControl(geocoder);
 
       /**
        * Wait until the map loads to make changes to the map.
@@ -280,9 +312,58 @@
          * - The location listings on the side of the page
          * - The markers onto the map
          */
+        var options = { units: 'miles' };
+        listings.features.forEach(function(listing) {
+            Object.defineProperty(listing.properties, 'distance', {
+            value: turf.distance([longitude, latitude], listing.geometry, options),
+            writable: true,
+            enumerable: true,
+            configurable: true
+            });
+        });
+        listings.features.sort(function(a, b) {
+          if (a.properties.distance > b.properties.distance) {
+            return 1;
+          }
+          if (a.properties.distance < b.properties.distance) {
+            return -1;
+          }
+          return 0; // a must be equal to b
+        });
+        
         buildLocationList(listings);
         addMarkers();
       });
+
+    geocoder.on('result', function(ev) {
+        var searchResult = ev.result.geometry;
+        var options = { units: 'miles' };
+        listings.features.forEach(function(listing) {
+            Object.defineProperty(listing.properties, 'distance', {
+            value: turf.distance(searchResult, listing.geometry, options),
+            writable: true,
+            enumerable: true,
+            configurable: true
+            });
+        });
+        listings.features.sort(function(a, b) {
+          if (a.properties.distance > b.properties.distance) {
+            return 1;
+          }
+          if (a.properties.distance < b.properties.distance) {
+            return -1;
+          }
+          return 0; // a must be equal to b
+        });
+        var listings_list = document.getElementById('listings');
+        while (listings_list.firstChild) {
+          listings_list.removeChild(listings_list.firstChild);
+        }
+        buildLocationList(listings);
+        //flyToStore(listings.features[0]);
+        createPopUp(listings.features[0]);
+ 
+    });
       
       /**
        * Add a marker to the map for every store listing.
@@ -397,7 +478,10 @@
            * 3. Close all other popups and display popup for clicked store
            * 4. Highlight listing in sidebar (and remove highlight for all other listings)
            **/
-          var prev_activeButton = null;
+        if (prop.distance) {
+          var roundedDistance = Math.round(prop.distance * 10) / 10;
+          details.innerHTML += '<br /><strong>' + roundedDistance + ' miles away</strong>';
+        }
           link.addEventListener('click', function (e) {
             for (var i = 0; i < data.features.length; i++) {
               if (this.id === 'link-' + data.features[i].properties.id) {
@@ -431,7 +515,7 @@
       function flyToStore(currentFeature) {
         map.flyTo({
           center: currentFeature.geometry.coordinates,
-          zoom: 15
+          zoom: 14
         });
       }
 
