got action mailer to work

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,12 @@
-<h1>User#welcome</h1>
+<html>
+  <head> 
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' /> 
+  </head>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
-</p>
+  <body>
+    <h1>Welcome to AirStorage, <%= @user.name%></h1>
+    <p>You have succesfully signed up, and now you can start renting spaces!</p>
+    <p>Good Luck!</p>
+  </body>
+</html>
+
