--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 user-info">
+                    <%= link_to "Send Welcome Email","/welcomemail",class:"btn btn-primary", method: :post %>
                     <h3><strong>User Info</strong></h3>
                     <div class="row">
                         <div class="col-xs-2">
