--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,21 +14,23 @@
         <%= link_to "AirStorage", '/', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <%= form_tag('/search', :method => "get",   
-                class: 'navbar-form navbar-left') do %>
-              <div class="input-group">
-                <%= search_field_tag :search, params[:search], placeholder: "Enter a zipcode", class: "form-control", style: "top: 1px;" %>
-                <div class="input-group-btn">
-                  <%= button_tag "", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>
+            <% unless session[:user_id].nil? %>
+              <%= form_tag('/search', :method => "get",   
+                  class: 'navbar-form navbar-left') do %>
+                <div class="input-group">
+                  <%= search_field_tag :search, params[:search], placeholder: "Enter a zipcode", class: "form-control", style: "top: 1px;" %>
+                  <div class="input-group-btn">
+                    <%= button_tag "", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>
+                  </div>
                 </div>
-              </div>
-              <select name="search_filter" style="width: 25%;">
-                <option value="">Zipcode</option>
-                <option value="city">City</option>
-                <option value="duration">Duration (weeks)</option>
-                <option value="box">Box size</option>
-                <option value="location">Locations nearby</option>
-              </select>
+                <select name="search_filter" style="width: 25%;">
+                  <option value="">Zipcode</option>
+                  <option value="city">City</option>
+                  <option value="duration">Duration (weeks)</option>
+                  <option value="box">Box size</option>
+                  <option value="location">Locations nearby</option>
+                </select>
+              <% end %>
             <% end %>
             <%# different layout for user_login and host_login and Non-login%>
             <% if user_logged_in? %>
