--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -2,7 +2,8 @@
 <div class="row">
     <div class="col-md-5 col-md-offset-3">
         <h1>Request a Listing</h1>
-        <%= form_with(model:@request,local:true,method: :post) do |f|%>
+        <%= form_with(url:"/requestlisting",local:true,method: :post) do |f|%>
+            <%= f.label :listing_id%>
             <%= f.hidden_field :listing_id, value: params[:listing_id]%>
             <%= f.label :boxes%>
             <%= f.select :boxes,[["1 Box",1],["2 Boxes",2],["3 Boxes",3],["4 Boxes",4],["5 Boxes",5]], class:"form-control"%>
@@ -12,5 +13,6 @@
 
             <%= f.submit "Request Space", class:"btn btn-primary"%>
         <%end%>
+        <%= debug(params) if Rails.env.development? %>
     </div>
 </div>
