--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,98 +1,165 @@
-<!DOCTYPE html>
 
-<html>
-    <head>
-    </head>
-    <body>
-        
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-4 user-info">
-                    <h3><strong>Host Information</strong></h3>
-                    <h4><%= @host.name%></h4>
-                    <h4><%= @host.email %></h4>
-                    <h4><%= @host.address%>, <%= @host.city%>, <%= @host.zip_code%></h4>
-                    <p class="lead"><%= @host.phone_number%></p>
-                </div>
-                <div class="col-md-4 current-listings">
+<div class="container">
+<div class="main-body">
+    
+    <style>
+        body{
+            margin-top:20px;
+            color: #1a202c;
+            text-align: left;
+            background-color: #e2e8f0;    
+        }
+    </style>
+    
+      <div class="row gutters-sm">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="d-flex flex-column align-items-center text-center">
+                <section class="hk-sec-wrapper">
+                  <div class="avatar">
+                    <span class="avatar-text avatar-text-danger rounded-circle"><span class="initial-wrap"><%= get_initials(@host.name)%><span></span></span>
+                    </span>
+                  </div>
+                </section>
+                <h3 style="color:green;">Host</h3>
+                <div class="mt-3">
+                 <h4><%= @host.name%></h4>
+                  <p class="text-secondary mb-1"><%= @host.email%></p>
+                  <p class="text-muted font-size-sm"><%= @host.city + ', ' + @host.state%></p>
                     <% if current_host == @host%>
                     <%= link_to "Add New Listing", "/listings/new", class:"btn btn-primary"%>
+                    <%= link_to "Edit Profile", host_edit_path(@host), class:"btn btn-info"%>
                     <%end%>
-                    <h3>Current Listings</h3>
-                        <table class="table">
-                            <thead>
-                                <tr>    
-                                    <th scope="col">Listing ID</th>
-                                    <th scope="col">Space Available</th>
-                                    <th scope="col">Duration</th>
-                                </tr>
-                                
-                            </thead>
-                            <tbody>
-                                <% @listings.each do |l|%>
-                                    <tr>    
-                                        <th scope="row"><%= link_to l.id, l%></th>
-                                        <td><%= l.space%> Boxes</td>
-                                        <td><%= l.duration%> Weeks</td>
-                                    </tr>
-                                <%end%>
-                            </tbody>
-                        </table>
-                  
                 </div>
-
-                <% if current_host == @host%>
-                <div class="col-md-4 recent-transactions">
-                    <h3>Recent Transactions</h3>
-                    <table class="table">   
+              </div>
+            </div>
+          </div>
+        </div>
+         <% if current_host == @host%>
+        <div class="col-md-8">
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-sm-3">
+                  <h5 class="mb-0">Full Name</h5>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                    <%= @host.name%>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <h5 class="mb-0">Email</h5>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                    <%= @host.email%>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <h5 class="mb-0">Phone</h5>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                    <%= '(' + @host.phone_number.first(3) + ')' + '-' + @host.phone_number[3, 3] + '-' +@host.phone_number.last(4)  %>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <h5 class="mb-0">Address</h5>
+                </div>
+                <div class="col-sm-9 text-secondary">
+                    <%= @host.address + ', ' + @host.city + ', ' + @host.state +  ' ' + @host.zip_code  %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row gutters-sm">
+            <div class="col-sm-6 mb-3">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h4 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Current Listings</h4>
+                    <table class="table">
                         <thead>
-                            <tr>
+                            <tr>    
                                 <th scope="col">Listing ID</th>
-                                <th scope="col">Renter</th>
+                                <th scope="col">Space Available</th>
+                                <th scope="col">Duration</th>
                             </tr>
+                                
                         </thead>
                         <tbody>
-                            <% @transactions.each do |t|%>
-                                <th scope="row"><%= link_to t.listing_id,t.listing%></th>
-                                <td><%= t.user.name%></td>
+                            <% @listings.each do |l|%>
+                                <tr>    
+                                    <th scope="row"><%= link_to l.id, l%></th>
+                                    <td><%= l.space%> Boxes</td>
+                                    <td><%= l.duration%> Weeks</td>
+                                </tr>
                             <%end%>
                         </tbody>
                     </table>
+
                 </div>
-                <%end%>
-               
+              </div>
             </div>
-            <div class="row">
-                 <% if current_host == @host%>
-                    <div class="col-md-4 requests">
-                        <h3>Pending Requests</h3>
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Listing ID</th>
-                                    <th scope="col">User</th>
-                                    <th scope="col">Accept/Deny</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% @requests.each do |r|%>
-                                    <tr>
-                                        <td><%= link_to r.listing_id, r.listing%></td>
-                                        <td><%= link_to r.user.name, r.user%></td>
-                                        <td>
-                                            <%= link_to "Accept","/accept/#{r.id}",class:"btn btn-success", method: :delete%>
-                                            <%= link_to "Deny", "/deny/#{r.id}",class:"btn btn-danger", method: :delete%>
-                                        </td>
-                                    </tr>
-                                <%end%>
+            <div class="col-sm-6 mb-3">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h4 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Pending Requests</h4>
+                 <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Listing ID</th>
+                            <th scope="col">User</th>
+                            <th scope="col">Accept/Deny</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @requests.each do |r|%>
+                            <tr>
+                                <td><%= link_to r.listing_id, r.listing%></td>
+                                <td><%= link_to r.user.name, r.user%></td>
+                                <td>
+                                    <%= link_to "Accept","/accept/#{r.id}",class:"btn btn-success", method: :delete%>
+                                    <%= link_to "Deny", "/deny/#{r.id}",class:"btn btn-danger", method: :delete%>
+                                </td>
+                            </tr>
+                        <%end%>
                                 
-                            </tbody>
-                        </table>
-                    </div>
-                <%end%>
+                    </tbody>
+                </table>
+              </div>
             </div>
+          </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    </body>
-</html>
+        <div class="row gutters-sm">
+        <div class="col-sm-6 mb-3">
+          <div class="card h-100">
+            <div class="card-body">
+              <h4 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Recent Transactions</h4>
+                <table class="table">   
+                    <thead>
+                        <tr>
+                            <th scope="col">Listing ID</th>
+                            <th scope="col">Renter</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @transactions.each do |t|%>
+                            <th scope="row"><%= link_to t.listing_id,t.listing%></th>
+                            <td><%= t.user.name%></td>
+                        <%end%>
+                    </tbody>
+                </table>
+
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+        <%end%>
+    </div>
+</div>
