--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -461,7 +461,7 @@
             buttonElem.id = 'button';
             /* Assign the `marker` class to each button for styling. */
             buttonElem.href = '/listing/' + prop.listing_id;
-            buttonElem.innerHTML = 'Rent Space';
+            buttonElem.innerHTML = 'Request Space';
             buttonElem.className = 'button';
             buttonElem.style.display = 'none';
 
