--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -81,7 +81,7 @@
         ['West Virginia', 'WV'],
         ['Wisconsin', 'WI'],
         ['Wyoming', 'WY']
-      ], class:"form-control" , include_blank: true%>
+      ], {:style => "min-width: 200px;"}, class:"form-control" , include_blank: true%>
       <%= f.label :zip_code, "Zip code" %>
       <%= f.text_field :zip_code, class: 'form-control' %>
 
