--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -13,10 +13,10 @@
                     
 
                         <%= f.label :space%>
-                        <%= f.select :space,[["1 Box",1],["2 Boxes",2],["3 Boxes",3],["4 Boxes",4],["5 Boxes",5]], class:"form-control"%>
+                        <%= f.select :space,num_box_array(25), {:style => "min-width: 200px;"}, class:"form-control"%>
                         <br/>
                         <%= f.label :duration,"Duration (in weeks)"%>
-                        <%= f.text_field :duration%>
+                        <%= f.select :duration,num_weeks_array(52), {:style => "min-width: 200px;"}, class:"form-control"%>
                         <br/>
                         <%= f.submit "Post Listing", class:"btn btn-primary"%>
                     <%end%>
