--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -13,6 +13,30 @@
                 <%= link_to "Rent Space", new_request_path(:listing_id => params[:id], :space => @listing.space, :duration => @listing.duration),class:"btn btn-primary"%>
                 <% elsif current_host == @host %>
                 <%= link_to "Delete Listing","/deletelisting/#{@listing.id}",class:"btn btn-danger",method: :delete%>
+                <div class="card">
+                <h4>Requests</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Listing ID</th>
+                            <th scope="col">User</th>
+                            <th scope="col">Accept/Deny</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @requests.each do |r|%>
+                            <tr>
+                                <td><%= link_to r.listing_id, r.listing%></td>
+                                <td><%= link_to r.user.name, r.user%></td>
+                                <td>
+                                    <%= link_to "Accept","/accept/#{r.id}",class:"btn btn-success", method: :delete%>
+                                    <%= link_to "Deny", "/deny/#{r.id}",class:"btn btn-danger", method: :delete%>
+                                </td>
+                            </tr>
+                        <%end%>
+                                
+                    </tbody>
+                </table>
                 <% end%>
            </div>  
         </div>
