--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -134,3 +134,9 @@ input {
 #homepage{
   background-color: white;
 }
+
+.listing-info{
+  padding: 5px;
+  text-align: center;
+  background-color: white;
+}
